src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_task_detail_overlay_zoomed.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
┌ Task #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Repo:  /repo/my-project                                                                                               │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│First line of description.                                                                                            │
│Second line.                                                                                                          │
│Third line.                                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└ j/k scroll · z zoom · q/Esc/Enter close ─────────────────────────────────────────────────────────────────────────────┘
[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]plit
