src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_tips_overlay_new_tip_shows_badge.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │  ▎ #3 Task 3              │                              │  ▎ #4 Task 4
   ◦ <1h                      │   ◉ running               │                              │   ✓ <1h
──────────────────────────────│───────────────────────────│                              │──────────────────────────────
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h            ╭ Tips & Tricks (1 / 3) ───────────────────────────────────────────────────────╮
────────────────────│Tip One                                                                       │
                    │                                                                              │
                    │Body one                                                                      │
                    │                                                                              │
                    │                                                                         NEW  │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │h/← l/→ browse  [n] new only  [x] never  [q] close                            │
────────────────────╰──────────────────────────────────────────────────────────────────────────────╯────────────────────







[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]plit
