src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_todo_list_with_done_items.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 0 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                  ╭ TODO (2 open) ───────────────────────────────────────────────────────────────────╮
                  │▢ Reply to Sven re: scheduler                                                     │
                  │▢ Prep standup notes                                                              │
                  │▣ Merge planner spec                                                              │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
                  │                                                                                  │
──────────────────│                                                                                  │──────────────────
                  │ a add · space done · J/K order · e edit · c clear-done · d del · q back          │
                  ╰──────────────────────────────────────────────────────────────────────────────────╯





[a] select all  [n]ew  [E]pic  [D] quick  [s]plit  [F]lat  [f]ilter  [/] search  [I] learnings  [P] todo  [t] add  [?] h
