src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_top_indicators_in_board_mode.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 2 [ ]                ◦ RUNNING 0                   ◦ REVIEW 0                      ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #1 My Feed            │ │                           │                              │
 │    no subtasks           │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
 ╭──────────────────────────╮ │                           │                              │
 │  ▎ #2 Another Feed       │ │                           │                              │
 │    no subtasks           │ │                           │                              │
 ╰──────────────────────────╯ │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[Space] enter  [Enter] detail  [e]dit  [r]efresh  [L] status →  [H] status ←  [x] delete  [a] select all  [n]ew  [E]pic
