src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_top_indicators_in_feed_epic_mode.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                              manual dispatch [U]  group:off [R]  🔕  [N]
        ▸ BACKLOG 0 [ ]                ◦ RUNNING 0                   ◦ REVIEW 0                      ◦ DONE 0
╭ #1 My Feed ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│──────────────────────────────│──────────────────────────│──────────────────────────────│─────────────────────────────│
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
│                              │                          │                              │                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
[a] select all  [n]ew  [E]pic  [D] quick  [s]plit  [F]lat  [f]ilter  [/] search  [?] help
