src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__todos_overlay_shows_task_and_epic_badges.snap
---
source: src/tui/tests/snapshots.rs
expression: terminal.backend().to_string()
---
"                                                                                                                  🔕 [N]" Hidden by multi-width symbols: [(115, " ")]
"        ▸ backlog 0 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0           "
"──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────"
"                              │                           │                              │                              "
"                              │                           │                              │                              "
"                              │                           │                              │                              "
"                  ╭ TODO (3 open) ───────────────────────────────────────────────────────────────────╮                  "
"                  │▢ Linked to task  [task #42]                                                      │                  "
"                  │▢ Linked to epic  [epic #7]                                                       │                  "
"                  │▢ Unlinked todo                                                                   │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"──────────────────│                                                                                  │──────────────────"
"                  │ a add · space done · J/K order · e edit · L link · U unlink · Enter/g jump · c cl│                  "
"                  ╰──────────────────────────────────────────────────────────────────────────────────╯                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"[a] select all  [n]ew  [E]pic  [D] quick  [s]plit  [F]lat  [f]ilter  [/] search  [I] learnings  [P] todo  [t] add  [?] h"
